# jones-gpu

./: Cargo.toml  README.md
src/: main.rs
src/render/: mod.rs
src/render/shaders/: vertex_fragment.wgsl
src/simulation/: hashgrid.rs  mod.rs
src/simulation/shaders/: integrate.wgsl  interact.wgsl
