[package]
name = "jones-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.31.4", features = ["bytemuck"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
winit = "0.27.5"
wgpu = "0.14.2"
rand = "0.8.5"
eyre = "0.6.8"
